# Fission

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  docs.yml
core/: Cargo.toml
core/src/: api.rs  dataframe.rs  dataset.rs  lib.rs  main.rs  metrics.rs  reader.rs
core/src/api/: mod.rs
core/src/node/: mod.rs
core/src/node/job/: mod.rs
operator/: Cargo.toml
operator/src/: lib.rs  main.rs
operator/src/resources/: example.rs
stream/: Cargo.toml
stream/src/: time.rs
